# pyinfra-salt

./: README.md  setup.cfg
examples/: deploy.py  inventory.py  pyinfra_salt
examples/files/master.d/: api.conf  gitfs.conf  modules.conf  pillar.conf
examples/files/minion.d/: saltenv.conf
pyinfra_salt/: __init__.py  salt.py
