[metadata]
name = pyinfra_salt
version = 0.1
description = pyinfra deployment to deploy salt-master or salt-minions
long_description = file: README.md
author = Chris Row
author_email = memblin@discursive.org
url = https://github.com/TKC-Labs/pyinfra-salt

[options]
include_package_data = True
packages = find:
install_requires = 
    pyinfra
    requests

[options.package_data]
example = *
